--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -71,7 +71,9 @@
   },
   "cart": {
     "title": "Корзина",
-    "total": "Итого:"
+    "total": "Итого:",
+    "empty": "Ваша корзина пуста",
+    "go_to_market": "Перейти в магазин"
   },
   "buttons": {
     "add_to_cart": "Добавить в корзину",
