--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -16,6 +16,8 @@
     "one_click": "Один клик к вашему новому Lixiang",
     "create_ideal": "Создайте свой идеальный LiXiang с помощью конфигуратора",
     "length": "Длина",
+    "category": "Категория",
+
     "width": "Ширина",
     "height": "Высота",
     "wheelbase": "Колёсная база",
