--- a/i18n/locales/uz.json
+++ b/i18n/locales/uz.json
@@ -17,6 +17,8 @@
     "one_click": "Yangi Lixiang avtomobilingizga birgina bosish",
     "create_ideal": "Konfigurator yordamida o'zingizga mos Lixiang yarating",
     "length": "Uzunlik",
+    "category": "Turi",
+
     "width": "Kenglik",
     "height": "Balandlik",
     "wheelbase": "G'ildirak bazasi",
