--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -77,10 +77,28 @@
     "empty": "Ваша корзина пуста",
     "go_to_market": "Перейти в магазин"
   },
+  "model": {
+    "title": "Один клик к вашему новому {name}",
+    "subtitle": "Создайте свой идеальный {name} с помощью конфигуратора",
+    "length": "Длина",
+    "width": "Ширина",
+    "height": "Высота",
+    "wheelbase": "Колёсная база",
+    "power_reserve": "Запас хода",
+    "zero_to_hundred": "0 - 100 км/ч",
+    "max_speed": "Максимальная скорость",
+    "autopilot_on": "Автопилот",
+    "autopilot_off": "Без автопилота",
+    "color_title": "Цвет кузова",
+    "video": "Видео o модели"
+  },
+
+  "loading": "Загрузка...",
   "buttons": {
     "add_to_cart": "Добавить в корзину",
     "go": "Перейти",
-    "order": "Заявка дилеру"
+    "order": "Заявка дилеру",
+    "configurator": "Конфигуратор"
   },
   "product": {
     "price": "Цена",
@@ -114,5 +132,23 @@
     "agreement": "Нажимая на кнопку “Оформить заявку”, я даю своё согласие на обработку моих персональных данных в соответствии с политикой конфиденциальности.",
     "back": "Назад"
 
+  },
+  "footer": {
+    "cars": "Автомобили",
+    "company": "Компания",
+    "magazine": "Журнал Li Auto",
+    "contacts": "Контакты",
+    "about": "О компании",
+    "purchase": "Покупка",
+    "find_dealer": "Найти диллера",
+    "test_drive": "Тест-драйв",
+    "leasing": "Лизинг",
+    "offer": "Получить предложение",
+    "owners": "Владельцам",
+    "service": "Сервис",
+    "service_booking": "Запись на сервис",
+    "accessories": "Аксессуары",
+    "rus": "Русификация"
   }
+
 }
