--- a/i18n/locales/uz.json
+++ b/i18n/locales/uz.json
@@ -18,6 +18,11 @@
     "create_ideal": "Konfigurator yordamida o'zingizga mos Lixiang yarating",
     "length": "Uzunlik",
     "category": "Turi",
+    "about_block1_title": "Lixiang'ning O‘zbekistondagi rasmiy dileri",
+    "about_block1_text": "YAS AUTO — O‘zbekistondagi Lixiang brendining rasmiy dileri. Biz zamonaviy, aqlli va ekologik avtomobillarni taklif qilamiz, innovatsiyalar, qulaylik va xavfsizlikni qadrlovchilarga mo‘ljallangan.",
+
+    "about_block2_title": "Nega YAS AUTO?",
+    "about_block2_text": "• 4 yillik rasmiy kafolat\n• Avtomobillar mavjud, kutmasdan olish mumkin\n• To‘liq hujjatlar va yuridik yordam\n• Har bir mijozga individual yondashuv\n• Sotuvdan keyingi xizmat va yordam\n\nBiz sizga shunchaki avtomobil emas — yangi harakat erkinligini taklif etamiz.",
 
     "width": "Kenglik",
     "height": "Balandlik",
@@ -34,8 +39,7 @@
     "leave_request": "So'rov yuborish",
     "about": "Biz haqimizda",
     "lorem_title": "Lorem Ipsum",
-    "lorem_text": "Yorem ipsum dolor sit amet, consectetur adipiscing elit...orem ipsum dolor sit amet, consectetur adipiscing elit...orem ipsum dolor sit amet, consectetur adipiscing elit...Yorem ipsum dolor sit amet, consectetur adipiscing elit...orem ipsum dolor sit amet, consectetur adipiscing elit..Yorem ipsum dolor sit amet, consectetur adipiscing elit...orem ipsum dolor sit amet, consectetur adipiscing elit.."
-
+    "lorem_text": "Li 9 - yuqori darajadagi qulaylik, ilg'or texnologiya va ta'sirchan texnik xususiyatlarni o'zida mujassam etgan yangi avlod flagman elektromobildir.\n\nU xavfsizlik, innovatsiya va haydovchi va yo'lovchilar uchun maksimal qulaylikni qadrlaydiganlar uchun mo'ljallangan. Aqlli multimedia tizimi, moslashuvchan yoritish va ovozli boshqaruv funksiyasiga ega keng salon.\n\n zaxira, aqlli haydovchiga yordam tizimi va puxta o'ylangan suspenziya, Li 9 shahar sharoitida ham, uzoq masofalarga sayohat qilish uchun ham idealdir."
   },
   "car": {
     "request": "Dilerga so‘rov",
