--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -7,6 +7,12 @@
     "in_stock": "Авто в наличии",
     "models": "Модели"
   },
+  "stock": {
+    "title": "Авто в наличии",
+    "more": "Подробнее",
+    "empty": "К сожалению, пока нет машин в наличии."
+  },
+
   "main": {
     "models": "Модели",
     "from": "От",
