--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -12,6 +12,50 @@
     "more": "Подробнее",
     "empty": "К сожалению, пока нет машин в наличии."
   },
+  "seo": {
+    "home": {
+      "title": "Официальный дилер Lixiang в Узбекистане — YasAuto",
+      "description": "YasAuto — официальный дилер Lixiang. Электромобили L9, L7. Рассрочка, тест-драйв.",
+      "keywords": "официальный дилер Lixiang, YasAuto, L9, L7, авто Узбекистан",
+      "og_title": "YasAuto — Lixiang в Узбекистане",
+      "og_description": "Электромобили Lixiang. Официальная гарантия, доставка и сервис."
+    },
+    "market": {
+      "title": "Магазин Lixiang в Узбекистане — аксессуары и запчасти",
+      "description": "Официальный магазин YasAuto. Аксессуары, запчасти и комплектующие для автомобилей Lixiang. Доставка по Узбекистану.",
+      "keywords": "магазин lixiang, аксессуары, запчасти, L9, L7, yasauto, ташкент",
+      "og_title": "Магазин Lixiang | YasAuto Узбекистан",
+      "og_description": "Аксессуары и запчасти для электромобилей Lixiang от официального дилера YasAuto."
+    },
+    "product": {
+      "title": "Аксессуар Lixiang",
+      "default_description": "Оригинальные аксессуары и запчасти для автомобилей Lixiang от YasAuto."
+    },
+    "models": {
+      "title": "Модели Lixiang в Узбекистане — Li Auto Li9, Li7, Li6",
+      "description": "Выберите свою модель Lixiang. Li9, Li7, Li6 — новые электромобили с доставкой по Узбекистану.",
+      "keywords": "модели lixiang, li9, li7, li6, электромобиль, ташкент",
+      "og_title": "Электромобили Lixiang — все модели",
+      "og_description": "Актуальные модели Lixiang от официального дилера YasAuto. Описание, цены, фото."
+    },
+    "model": {
+      "title_seo": "Электромобиль Lixiang",
+      "description_seo": "Подробная информация о модели Lixiang. Характеристики, изображения, видео, автопилот, интерьер и безопасность."
+    },
+    "stock": {
+      "title": "Авто в наличии — Lixiang в Узбекистане | YasAuto",
+      "description": "Актуальный список автомобилей Lixiang в наличии. Гарантия, цена, комплектация, доставка по Узбекистану.",
+      "keywords": "lixiang в наличии, авто ташкент, li9, li7, yasauto",
+      "og_title": "Купить авто Lixiang в наличии",
+      "og_description": "Автомобили Lixiang Li9, Li7 в наличии. Быстрая доставка, гарантия и лучшие цены от YasAuto."
+    },
+    "car": {
+      "page_title": "Автомобиль в наличии",
+      "page_description": "Официальный дилер Lixiang. Узнайте характеристики, комплектацию и доступность автомобиля."
+    }
+
+  },
+
 
   "main": {
     "weekdays": "ПН-ПТ 24/7",
