--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -52,8 +52,14 @@
     "car": {
       "page_title": "Автомобиль в наличии",
       "page_description": "Официальный дилер Lixiang. Узнайте характеристики, комплектацию и доступность автомобиля."
+    },
+    "contact": {
+      "title": "Контакты YasAuto — официальный дилер Lixiang",
+      "description": "Свяжитесь с YasAuto для покупки Lixiang в Узбекистане. Мы находимся в Ташкенте, звоните +998 (77) 343 99 99",
+      "keywords": "контакты, yasauto, lixiang, ташкент, автосалон, дилер",
+      "og_title": "Контакты YasAuto",
+      "og_description": "Адрес и контакты YasAuto — официальный дилер Lixiang в Узбекистане"
     }
-
   },
 
 
