--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -13,6 +13,7 @@
     "empty": "К сожалению, пока нет машин в наличии."
   },
   "seo": {
+
     "home": {
       "title": "Официальный дилер Lixiang в Узбекистане — YasAuto",
       "description": "YasAuto — официальный дилер Lixiang. Электромобили L9, L7. Рассрочка, тест-драйв.",
@@ -100,9 +101,11 @@
 
   },
   "car": {
+    "available": "Новый",
+    "on_order": "Б/У",
+
     "request": "Заявка дилеру",
     "status": "Статус",
-    "on_order": "На заказ",
     "year": "Год выпуска",
     "mileage": "Пробег",
     "body": "Кузов",
