--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -65,8 +65,8 @@
 
 
   "main": {
-    "weekdays": "ПН-ПТ 24/7",
-    "weekends": "СБ-ВС 8:00 - 20:00",
+    "weekdays": "Без выходных 9:00 - 20:00",
+    "weekends": "СБ-ВС 9:00 - 20:00",
     "models": "Модели",
     "from": "От",
     "learn_more": "Узнать больше",
