--- a/i18n/locales/uz.json
+++ b/i18n/locales/uz.json
@@ -64,7 +64,7 @@
 
 
   "main": {
-    "weekdays": "DU-JU 24/7",
+    "weekdays": "Dam olish kunlarisiz 9:00 dan 20:00 gacha",
     "weekends": "SH-YA 8:00 - 20:00",
     "models": "Modellar",
     "from": "Dan",
