--- a/locales/uz.json
+++ b/locales/uz.json
@@ -14,6 +14,8 @@
   },
   "product": {
     "price": "Narxi",
+    "title": "Toshkentda xarid qilish - ",
+"title_second": "uchun Lixiang",
     "quantity": "Mahsulot soni",
     "category": "Kuzov obvesi",
     "description": "Horem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis."
