--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -16,6 +16,8 @@
     "price": "Narxi",
     "quantity": "Mahsulot soni",
     "category": "Kuzov obvesi",
+    "title": "Toshkentda xarid qilish - ",
+"title_second": "uchun Lixiang",
     "description": "Horem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis."
   },
   "form": {
