carinstock more ceo test

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -50,7 +50,8 @@
       "og_description": "Available Lixiang vehicles — fast delivery and warranty from YasAuto Uzbekistan."
     },
     "car": {
-      "page_title": "Available Car in Stock",
+      "page_title": "Buy a car in stock",
+"page_title2": "in Tashkent Yas Auto",
       "page_description": "Lixiang official dealer in Uzbekistan. Check specifications, equipment and availability."
     },
     "contact": {
