--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -51,7 +51,8 @@
       "og_description": "Автомобили Lixiang Li9, Li7 в наличии. Быстрая доставка, гарантия и лучшие цены от YasAuto."
     },
     "car": {
-      "page_title": "Автомобиль в наличии",
+      "page_title": "Купить автомобиль в наличии",
+      "page_title2": "в ташкенте Yas Auto",
       "page_description": "Официальный дилер Lixiang. Узнайте характеристики, комплектацию и доступность автомобиля."
     },
     "contact": {
