--- a/i18n/locales/uz.json
+++ b/i18n/locales/uz.json
@@ -50,7 +50,8 @@
       "og_description": "Li9 va Li7 modellarini YasAuto orqali hozir sotib oling. Yetkazib berish va kafolat mavjud."
     },
     "car": {
-      "page_title": "Mavjud avtomobil",
+      "page_title": "Avtomobilni zaxirada xarid qilish",
+"page_title2": "Toshkentda Yas Auto",
       "page_description": "Lixiang rasmiy dileri. Texnik maʼlumotlar, jihozlanish va mavjudlikni bilib oling."
     },
     "contact": {
