seo optimization full

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -184,6 +184,7 @@
     "contact_heading": "Оставьте контактные данные, чтобы мы сделали вам коммерческое предложение"
   },
   "form": {
+    "consent": "Я согласен(на) на обработку персональных данных",
     "first_name": "Имя*",
     "last_name": "Фамилия*",
     "phone": "Номер телефона",
