--- a/i18n/locales/uz.json
+++ b/i18n/locales/uz.json
@@ -188,7 +188,7 @@
     "phone": "Telefon raqami",
     "comment": "Izoh",
     "next": "Keyingisi",
-
+    "consent": "Men shaxsiy maʼlumotlarimni qayta ishlashga roziman",
     "total": "Jami",
     "error": "Iltimos, majburiy maydonlarni to‘ldiring",
     "email": "Pochta",
