--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -187,7 +187,7 @@
     "last_name": "Last Name*",
     "phone": "Phone Number",
     "next": "Next",
-
+    "consent": "I agree to the processing of my personal data",
     "comment": "Comment",
     "total": "Total",
     "error": "Please fill in the required fields",
