добавил переклбчатель филиалов

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -84,7 +84,11 @@
     "see_more": "See more",
     "contact": "Contacts",
     "branches": "Branches",
+    "branch_yunusabad": "Yunusabad",
+    "branch_sergeli": "Sergeli",
     "address": "Address",
+    "address_yunusabad": "Malaya Koltsevaya Road 4/1 block 4",
+    "address_sergeli": "Tashkent, Sergeli district, Qo'tbaraka citizens' assembly",
     "phone": "Contact phone",
     "category": "Category",
     "worktime": "Working hours",
