--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -92,7 +92,11 @@
     "see_more": "Смотреть еще",
     "contact": "Контакты",
     "branches": "Филиалы",
+    "branch_yunusabad": "Юнусабад",
+    "branch_sergeli": "Сергели",
     "address": "Адрес",
+    "address_yunusabad": "Малая кольцевая дорога 4/1 блок 4",
+    "address_sergeli": "Ташкент, Сергелийский район сход граждан Кут-Барака",
     "phone": "Контактный телефон",
     "worktime": "Время работы",
     "leave_request": "Оставить заявку",
