--- a/i18n/locales/uz.json
+++ b/i18n/locales/uz.json
@@ -91,7 +91,11 @@
     "see_more": "Yana ko‘rish",
     "contact": "Kontaktlar",
     "branches": "Filiallar",
+    "branch_yunusabad": "Yunusobod",
+    "branch_sergeli": "Sergeli",
     "address": "Manzil",
+    "address_yunusabad": "Kichik halqa yo'li 4/1 blok 4",
+    "address_sergeli": "Toshkent, Sergeli tumani Qo'tbaraka fuqarolar yig'ini",
     "phone": "Aloqa raqami",
     "worktime": "Ish vaqti",
     "leave_request": "So'rov yuborish",
